Добавил схему InvitationTokenJoin - была ошибка в спецификации
